k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: claims-api
spec:
  selector:
    app: claims-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
